--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 dependencies = [
   "numpy",
+  "nidaqmx",
 ]
 dynamic = [
   "version",
@@ -21,6 +22,9 @@ dynamic = [
 [project.urls]
 Homepage = "https://github.com/nowacklab/nidaq"
 Issues = "https://github.com/nowacklab/nidaq/issues"
+
+[project.scripts]
+daqiv = "nidaq:nidaq"
 
 [build-system]
 requires = ["setuptools", "versioneer[toml]==0.29"]
