Argument parsing and more git functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 dependencies = [
+  "gitpython",
+  "pyyaml",
   "numpy",
   "nidaqmx",
 ]
